This comes from the previous job

--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -51,7 +51,7 @@ jobs:
           input="The quick brown fox jumped over the lazy dog."
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
-          export QTTS_KOKORO_IMAGE=quinngrier/qtts-kokoro:${{ steps.tag.outputs.tag }}-rc
+          export QTTS_KOKORO_IMAGE=quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }}-rc
           ./qtts "${input?}" || exit $?
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
