--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Run test script
         run: |
-          apt-get -q -y install ffmpeg
+          sudo apt-get -q -y install ffmpeg
           input="The quick brown fox jumped over the lazy dog."
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
