--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -50,11 +50,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Run test script
         run: |
+          tag=${{ needs.build_image.outputs.tag }}
           sudo apt-get -q -y install ffmpeg
           input="The quick brown fox jumped over the lazy dog."
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
-          export QTTS_KOKORO_IMAGE=docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }}-rc
+          export QTTS_KOKORO_IMAGE=docker.io/quinngrier/qtts-kokoro:${tag?}-rc
           bash -x ./qtts "${input?}" || exit $?
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -76,23 +77,26 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Pull candidate image
         run: |
+          tag=${{ needs.build_image.outputs.tag }}
           docker pull \
-            docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }}-rc \
+            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
           || exit $?
       - name: Tag final images
         run: |
+          tag=${{ needs.build_image.outputs.tag }}
           docker tag \
-            docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }}-rc \
-            docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }} \
+            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
+            docker.io/quinngrier/qtts-kokoro:${tag?} \
           || exit $?
           docker tag \
-            docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }}-rc \
+            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
             docker.io/quinngrier/qtts-kokoro:latest \
           || exit $?
       - name: Push final images
         run: |
+          tag=${{ needs.build_image.outputs.tag }}
           docker push \
-            docker.io/quinngrier/qtts-kokoro:${{ needs.build_image.outputs.tag }} \
+            docker.io/quinngrier/qtts-kokoro:${tag?} \
           || exit $?
           docker push \
             docker.io/quinngrier/qtts-kokoro:latest \
