--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -50,12 +50,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Run test script
         run: |
+          name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
           sudo apt-get -q -y install ffmpeg
           input="The quick brown fox jumped over the lazy dog."
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
-          export QTTS_KOKORO_IMAGE=docker.io/quinngrier/qtts-kokoro:${tag?}-rc
+          export QTTS_KOKORO_IMAGE=${name?}:${tag?}-rc
           bash -x ./qtts "${input?}" || exit $?
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -77,27 +78,18 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Pull candidate image
         run: |
+          name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker pull \
-            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
-          || exit $?
+          docker pull ${name?}:${tag?}-rc || exit $?
       - name: Tag final images
         run: |
+          name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker tag \
-            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
-            docker.io/quinngrier/qtts-kokoro:${tag?} \
-          || exit $?
-          docker tag \
-            docker.io/quinngrier/qtts-kokoro:${tag?}-rc \
-            docker.io/quinngrier/qtts-kokoro:latest \
-          || exit $?
+          docker tag ${name?}:${tag?}-rc ${name?}:${tag?} || exit $?
+          docker tag ${name?}:${tag?}-rc ${name?}:latest || exit $?
       - name: Push final images
         run: |
+          name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker push \
-            docker.io/quinngrier/qtts-kokoro:${tag?} \
-          || exit $?
-          docker push \
-            docker.io/quinngrier/qtts-kokoro:latest \
-          || exit $?
+          docker push ${name?}:${tag?} || exit $?
+          docker push ${name?}:latest || exit $?
