--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -57,7 +57,7 @@ jobs:
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
           export QTTS_KOKORO_IMAGE=${name?}:${tag?}-rc
-          bash -x ./qtts "${input?}" || exit $?
+          ./qtts "${input?}" || exit $?
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
