--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -16,6 +16,10 @@ on:
     - cron: 0 0 23 * *
   workflow_dispatch:
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
 
   build_image:
@@ -24,8 +28,10 @@ jobs:
       - name: Construct image tag
         id: tag
         run: |
-          tag=`date +%Y-%m-%d`-${GITHUB_RUN_ID?} || exit $?
-          echo tag=${tag?} >>${GITHUB_OUTPUT?} || exit $?
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
+          tag=`date +%Y-%m-%d`-${GITHUB_RUN_ID?}
+          echo tag=${tag?} >>${GITHUB_OUTPUT?}
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Log in to Docker Hub
@@ -50,6 +56,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Run test script
         run: |
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
           name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
           sudo apt-get -q -y install ffmpeg
@@ -57,7 +65,7 @@ jobs:
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
           export QTTS_KOKORO_IMAGE=${name?}:${tag?}-rc
-          ./qtts "${input?}" || exit $?
+          ./qtts "${input?}"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -78,18 +86,24 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Pull candidate image
         run: |
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
           name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker pull ${name?}:${tag?}-rc || exit $?
+          docker pull ${name?}:${tag?}-rc
       - name: Tag final images
         run: |
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
           name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker tag ${name?}:${tag?}-rc ${name?}:${tag?} || exit $?
-          docker tag ${name?}:${tag?}-rc ${name?}:latest || exit $?
+          docker tag ${name?}:${tag?}-rc ${name?}:${tag?}
+          docker tag ${name?}:${tag?}-rc ${name?}:latest
       - name: Push final images
         run: |
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
           name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          docker push ${name?}:${tag?} || exit $?
-          docker push ${name?}:latest || exit $?
+          docker push ${name?}:${tag?}
+          docker push ${name?}:latest
