--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -73,9 +73,11 @@ jobs:
         run: |
           set -E -e -o pipefail -u -x || exit $?
           trap exit ERR
+          export DEBIAN_FRONTEND=noninteractive
+          sudo apt-get -q -y update
+          sudo apt-get -q -y install ffmpeg
           name=docker.io/quinngrier/qtts-kokoro
           tag=${{ needs.build_image.outputs.tag }}
-          sudo apt-get -q -y install ffmpeg
           input="The quick brown fox jumped over the lazy dog."
           export QTTS_OUTFILE=output.ogg
           export QTTS_ENGINE=kokoro
