--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           set -E -e -o pipefail -u -x || exit $?
           trap exit ERR
-          tag=`date +%Y-%m-%d`-$GITHUB_RUN_ID
+          tag=$(date +%Y-%m-%d)-$GITHUB_RUN_ID
           echo tag=$tag >>$GITHUB_OUTPUT
       - name: Checkout repository
         uses: actions/checkout@v4
