--- a/.github/workflows/kitten.yml
+++ b/.github/workflows/kitten.yml
@@ -18,6 +18,6 @@ on:
 
 jobs:
   docker:
-    uses: quinngrier/qtts/.github/workflows/docker.yml@main
+    uses: ./.github/workflows/docker.yml@main
     with:
       engine: kitten
