--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -80,9 +80,10 @@ jobs:
           name=docker.io/quinngrier/qtts-${{ inputs.engine }}
           tag=${{ needs.build_image.outputs.tag }}
           input="The quick brown fox jumped over the lazy dog."
-          export QTTS_ENGINE=${{ inputs.engine }}
+          engine=${{ inputs.engine }}
           export QTTS_KOKORO_IMAGE=$name:$tag-rc
           ./qtts \
+            --engine $engine \
             --output output.ogg \
             "$input" \
           ;
