--- a/.github/workflows/kitten.yml
+++ b/.github/workflows/kitten.yml
@@ -20,5 +20,5 @@ jobs:
   docker:
     uses: ./.github/workflows/docker.yml
     with:
-      engine: kitten
+      model: kitten
     secrets: inherit
