Don't needlessly rebuild the Docker images so much

--- a/.github/workflows/kitten.yml
+++ b/.github/workflows/kitten.yml
@@ -12,6 +12,9 @@ name: kitten
 
 on:
   push:
+    paths:
+      - kitten/**
+      - !kitten/README.adoc
   schedule:
     - cron: 3 11 3 * *
   workflow_dispatch:
