--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -12,6 +12,9 @@ name: kokoro
 
 on:
   push:
+    paths:
+      - kokoro/**
+      - !kokoro/README.adoc
   schedule:
     - cron: 25 19 6 * *
   workflow_dispatch:
