Revise the kokoro voice handling

--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -15,6 +15,7 @@ on:
     paths:
       - kokoro/**
       - !kokoro/README.adoc
+      - !kokoro/README.adoc.bash
   schedule:
     - cron: 25 19 6 * *
   workflow_dispatch:
