--- a/.github/workflows/kitten.yml
+++ b/.github/workflows/kitten.yml
@@ -14,7 +14,7 @@ on:
   push:
     paths:
       - kitten/**
-      - !kitten/README.adoc
+      - "!kitten/README.adoc"
   schedule:
     - cron: 3 11 3 * *
   workflow_dispatch:
