--- a/.github/workflows/kokoro.yml
+++ b/.github/workflows/kokoro.yml
@@ -14,8 +14,8 @@ on:
   push:
     paths:
       - kokoro/**
-      - !kokoro/README.adoc
-      - !kokoro/README.adoc.bash
+      - "!kokoro/README.adoc"
+      - "!kokoro/README.adoc.bash"
   schedule:
     - cron: 25 19 6 * *
   workflow_dispatch:
