--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Build and push candidate image
         uses: docker/build-push-action@v4
         with:
-          context: ${{ inputs.model }}
+          context: models/${{ inputs.model }}
           push: true
           tags: docker.io/quinngrier/qtts-${{ inputs.model }}:${{ steps.tag.outputs.tag }}-rc
     outputs:
