--- a/.github/workflows/kitten.yml
+++ b/.github/workflows/kitten.yml
@@ -13,8 +13,8 @@ name: kitten
 on:
   push:
     paths:
-      - kitten/**
-      - "!kitten/README.adoc"
+      - models/kitten/**
+      - "!models/kitten/README.adoc"
   schedule:
     - cron: 3 11 3 * *
   workflow_dispatch:
