Try fix disk exhaustion in this CI job

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -75,6 +75,16 @@ jobs:
           set -E -e -o pipefail -u -x || exit $?
           trap exit ERR
           export DEBIAN_FRONTEND=noninteractive
+          df -h
+          for x in \
+            /opt/ghc \
+            /opt/hostedtoolcache/CodeQL \
+            /usr/local/lib/android \
+            /usr/share/dotnet \
+          ; do
+            sudo rm -f -r $x
+            df -h
+          done
           sudo apt-get -q -y update
           sudo apt-get -q -y install ffmpeg
           name=docker.io/quinngrier/qtts-${{ inputs.model }}
