--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -126,6 +126,20 @@ jobs:
       - test
     runs-on: ubuntu-latest
     steps:
+      - name: Free up disk space
+        run: |
+          set -E -e -o pipefail -u -x || exit $?
+          trap exit ERR
+          df -h
+          for x in \
+            /opt/ghc \
+            /opt/hostedtoolcache/CodeQL \
+            /usr/local/lib/android \
+            /usr/share/dotnet \
+          ; do
+            sudo rm -f -r $x
+            df -h
+          done
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
